fix boxes spacing

--- a/src/pages/dev/test-site/main-page/main.styl
+++ b/src/pages/dev/test-site/main-page/main.styl
@@ -395,10 +395,10 @@ a:hover
 
 .basic-card
   background-color: white
-  width: 90%
+  width: 95%
   margin: 2% 0
   text-align: center
-  padding: 0 10px
+  padding: 0 25px
   padding-bottom: 30px
   height: 25vh
 
@@ -416,7 +416,7 @@ a:hover
   box-shadow: black 1px 0 10px
 
 .right-card
-  margin-left: 10%
+  margin-left: 5%
 
 .basic-card2
   margin: 0
